a) clean up code. b) added cdk 2.3 c) bug fix d) refactor