@@ -50,7 +50,7 @@ public class Map1ValueComparator implements Comparator<Map<Integer, Integer>> {
     public int compare(Map<Integer, Integer> object1, Map<Integer, Integer> object2) {
         int size1 = object1.size();
         int size2 = object2.size();
-        int compare = Integer.signum(new Integer(size1).compareTo(size2));
+        int compare = Integer.signum(Integer.valueOf(size1).compareTo(size2));
 
         if (sortOrder == SortOrder.ASCENDING) {
             return compare;
